data/test/method_as_function/negative/2000.js
const axios = require('axios');
const id = 42
axios.post(`https://petstore.swagger.io/v2/pets/${id}`);